fix: add height to product image in order to fix the bug with cart-jumping

--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -16,7 +16,7 @@
 
 .productImage {
     max-width: 150px;
-    max-height: 150px;
+    height: 150px;
 }
 
 .productOpt {
